--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
 
         <activity android:name=".main_screen" />
         <activity android:name=".registration_screen" />
+        <activity android:name=".schedule_screen" />
 
     </application>
 
