--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".main_screen" />
         <activity android:name=".registration_screen" />
         <activity android:name=".schedule_screen" />
+        <activity android:name=".update_car_info_screen" />
 
     </application>
 
