--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,7 @@
         <activity android:name=".main_screen" />
         <activity android:name=".registration_screen" />
         <activity android:name=".schedule_screen" />
-        <activity android:name=".update_car_info_screen" />
-
+        <activity android:name=".match_found" />
     </application>
 
 </manifest>
